# riskprism

./: .env.example  .gitignore  .pre-commit-config.yaml  CLI_USAGE.md  DETAILED_ARCHITECTURE.md  README.md  backend_check.json  design.md  docker-compose.yml  final_backend.json  final_frontend.json  logs.sh  out1.txt  out2.txt  out_p1.txt  rebuild.sh  shell.sh  start.sh  test.sh  test_api.sh  test_response.json  tf-analyze
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  conftest.py  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  bedrock_client.py  database.py  llm_client.py  main.py  models.py  parser.py  risk_engine.py  session_store.py
backend/app/analyzers/: __init__.py  base.py  iam.py  terraform.py
backend/app/compliance/: fedramp.py
backend/app/pricing/: __init__.py  aws_pricing.py  estimator.py  models.py
backend/tests/fixtures/iam/: concurrent_test.json  expansion_test.json  iam_admin_policy.json  iam_expansion_test.json  iam_kms_unrestricted.json  iam_least_privilege.json  iam_not_action.json  iam_passrole_dangerous.json  iam_s3_public.json  new_rules_plan.json  plan_v1.json  plan_v2.json  sample_plan.json  test_diff.json
backend/tests/integration/: test_edge_cases.py  test_privacy.py  test_rate_limiting.py  test_security.py
backend/tests/unit/: test_caching.py  test_cost_estimator.py  test_hardening.py  test_iam_analyzer.py  test_llm_client.py  test_risk_engine.py
docs/: security_audit.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
scripts/: build-and-push.sh  ecs-task-def.json  logs.sh  riskprism  stop.sh  test.sh  tf-analyze
terraform/: README.md  deploy.sh  main.tf  outputs.tf  user_data.sh  variables.tf
tests/: conftest.py  test_iam_analyzer.py  (+2 more)
(+31 files in other folders)
