[project]
name = "riskprism-backend"
version = "0.2.0"
description = "RiskPrism Security Analysis Platform Backend"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert usage (fine in tests)
    "S104",   # binding to all interfaces (intentional for Docker)
    "S105",   # hardcoded password (false positives on test data)
    "S106",   # hardcoded password (false positives on test data)
    "B008",   # function call in default argument (FastAPI Depends pattern)
    "B904",   # raise from in except (existing code pattern)
    "SIM102", # nested if statements (existing code pattern)
    "SIM117", # nested with statements (test fixtures)
    "E402",   # module level import not at top (FastAPI pattern for late imports)
    "B007",   # loop variable not used (intentional in rate limit tests)
    "F841",   # unused variable (mock fixtures in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "F841", "SIM117"]
"conftest.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
